--- a/lambda_learning_BIC.ipynb
+++ b/lambda_learning_BIC.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
     "    y, z = get_cumsum(sequence)\n",
     "\n",
     "    # calculate lambda\n",
-    "    lda = np.log10(sequence_length)\n",
+    "    lda = np.log(sequence_length)\n",
     "\n",
     "    # get total labels\n",
     "    fold1_total_labels = len(neg_start_1) + len(pos_start_1)\n",
@@ -49,7 +49,7 @@
     "    # run each lambda and record it into csv file\n",
     "    row  = [i, fold1_total_labels, fold2_total_labels]\n",
     "\n",
-    "    chpnt = opart(lda, sequence, y, z)\n",
+    "    chpnt = opart(lda, sequence)\n",
     "    err_1 = error_count(chpnt, neg_start_1, neg_end_1, pos_start_1, pos_end_1)\n",
     "    err_2 = error_count(chpnt, neg_start_2, neg_end_2, pos_start_2, pos_end_2)\n",
     "    row.append(sum(err_1))\n",
