--- a/lambda_learning_RNN_relu.ipynb
+++ b/lambda_learning_RNN_relu.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch._C.Generator at 0x266712afcd0>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -19,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,9 +73,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch     0, Loss_1: 9654.5010, Loss_1_test: 9578.5010, Loss_2: 9652.5215, Loss_2_test: 9728.9961\n",
+      "Epoch     1, Loss_1: 9225.3545, Loss_1_test: 9152.0947, Loss_2: 9351.2129, Loss_2_test: 9425.7529\n",
+      "Epoch     2, Loss_1: 8806.4150, Loss_1_test: 8735.8477, Loss_2: 9052.2520, Loss_2_test: 9124.8672\n",
+      "Epoch     3, Loss_1: 8396.0195, Loss_1_test: 8328.1025, Loss_2: 8755.9150, Loss_2_test: 8826.6133\n",
+      "Epoch     4, Loss_1: 7995.4492, Loss_1_test: 7930.1367, Loss_2: 8462.1855, Loss_2_test: 8530.9766\n",
+      "Epoch     5, Loss_1: 7603.5156, Loss_1_test: 7540.7656, Loss_2: 8171.3125, Loss_2_test: 8238.2061\n",
+      "Epoch     6, Loss_1: 7219.9746, Loss_1_test: 7159.7495, Loss_2: 7883.3311, Loss_2_test: 7948.3379\n",
+      "Epoch     7, Loss_1: 6845.1875, Loss_1_test: 6787.4473, Loss_2: 7598.5225, Loss_2_test: 7661.6538\n",
+      "Epoch     8, Loss_1: 6478.4014, Loss_1_test: 6423.1089, Loss_2: 7317.1768, Loss_2_test: 7378.4468\n",
+      "Epoch     9, Loss_1: 6118.4492, Loss_1_test: 6065.5801, Loss_2: 7039.2290, Loss_2_test: 7098.6519\n",
+      "Epoch    10, Loss_1: 5765.4189, Loss_1_test: 5714.9448, Loss_2: 6764.8262, Loss_2_test: 6822.4160\n",
+      "Epoch    11, Loss_1: 5420.1167, Loss_1_test: 5372.0049, Loss_2: 6493.8286, Loss_2_test: 6549.5962\n",
+      "Epoch    12, Loss_1: 5082.1475, Loss_1_test: 5036.3701, Loss_2: 6226.5464, Loss_2_test: 6280.5098\n",
+      "Epoch    13, Loss_1: 4751.7129, Loss_1_test: 4708.2397, Loss_2: 5963.0576, Loss_2_test: 6015.2295\n",
+      "Epoch    14, Loss_1: 4429.1123, Loss_1_test: 4387.9126, Loss_2: 5703.1870, Loss_2_test: 5753.5811\n",
+      "Epoch    15, Loss_1: 4114.6567, Loss_1_test: 4075.6992, Loss_2: 5447.1875, Loss_2_test: 5495.8188\n",
+      "Epoch    16, Loss_1: 3808.9233, Loss_1_test: 3772.1716, Loss_2: 5195.2173, Loss_2_test: 5242.1025\n",
+      "Epoch    17, Loss_1: 3512.4751, Loss_1_test: 3477.8904, Loss_2: 4947.3906, Loss_2_test: 4992.5459\n"
+     ]
+    }
+   ],
    "source": [
     "# Instantiate the model, define custom loss function, and optimizer\n",
     "model1 = RNNModel()\n",
