--- a/lambda_learning_RNN_tanh.ipynb
+++ b/lambda_learning_RNN_tanh.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x21e7f0afcd0>"
+       "<torch._C.Generator at 0x1967f0ffcd0>"
       ]
      },
      "execution_count": 1,
@@ -34,22 +34,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Custom loss function\n",
-    "margin = 1\n",
-    "class SquaredHingeLoss(nn.Module):\n",
-    "    def forward(self, predicted, low, high):\n",
-    "        low  = low + margin\n",
-    "        high = high - margin\n",
-    "        loss = torch.relu(low - predicted) + torch.relu(predicted - high)\n",
-    "        return torch.mean(torch.square(loss), dtype=torch.float)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# sequences\n",
     "seqs = gen_data_dict('sequence_label_data/signals.gz')\n",
     "\n",
@@ -70,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,9 +73,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch     0, Loss_1: 10147.3105, Loss_1_test: 10068.1797, Loss_2: 20591.3125, Loss_2_test: 20734.7539\n",
+      "Epoch     1, Loss_1: 9631.8486, Loss_1_test: 9555.9932, Loss_2: 19731.6758, Loss_2_test: 19870.0117\n",
+      "Epoch     2, Loss_1: 9125.3174, Loss_1_test: 9052.7002, Loss_2: 18895.6426, Loss_2_test: 19028.9922\n",
+      "Epoch     3, Loss_1: 8628.2305, Loss_1_test: 8558.8115, Loss_2: 18083.2793, Loss_2_test: 18211.7676\n",
+      "Epoch     4, Loss_1: 8141.0557, Loss_1_test: 8074.7939, Loss_2: 17294.4766, Loss_2_test: 17418.2266\n",
+      "Epoch     5, Loss_1: 7664.3027, Loss_1_test: 7601.1533, Loss_2: 16528.9668, Loss_2_test: 16648.0957\n",
+      "Epoch     6, Loss_1: 7198.4478, Loss_1_test: 7138.3643, Loss_2: 15786.1826, Loss_2_test: 15900.8096\n",
+      "Epoch     7, Loss_1: 6743.9429, Loss_1_test: 6686.8765, Loss_2: 15065.3438, Loss_2_test: 15175.5801\n",
+      "Epoch     8, Loss_1: 6301.2671, Loss_1_test: 6247.1646, Loss_2: 14365.6816, Loss_2_test: 14471.6396\n",
+      "Epoch     9, Loss_1: 5870.8501, Loss_1_test: 5819.6587, Loss_2: 13686.4307, Loss_2_test: 13788.2129\n",
+      "Epoch    10, Loss_1: 5453.1499, Loss_1_test: 5404.8115, Loss_2: 13027.0752, Loss_2_test: 13124.7812\n",
+      "Epoch    11, Loss_1: 5048.5825, Loss_1_test: 5003.0381, Loss_2: 12387.1758, Loss_2_test: 12480.9092\n",
+      "Epoch    12, Loss_1: 4657.5703, Loss_1_test: 4614.7583, Loss_2: 11766.4512, Loss_2_test: 11856.3076\n",
+      "Epoch    13, Loss_1: 4280.5166, Loss_1_test: 4240.3735, Loss_2: 11164.6504, Loss_2_test: 11250.7285\n",
+      "Epoch    14, Loss_1: 3917.8191, Loss_1_test: 3880.2778, Loss_2: 10581.5312, Loss_2_test: 10663.9238\n",
+      "Epoch    15, Loss_1: 3569.8513, Loss_1_test: 3534.8450, Loss_2: 10016.8398, Loss_2_test: 10095.6436\n",
+      "Epoch    16, Loss_1: 3236.9854, Loss_1_test: 3204.4419, Loss_2: 9470.3213, Loss_2_test: 9545.6270\n",
+      "Epoch    17, Loss_1: 2919.5759, Loss_1_test: 2889.4231, Loss_2: 8941.7275, Loss_2_test: 9013.6279\n",
+      "Epoch    18, Loss_1: 2617.9519, Loss_1_test: 2590.1147, Loss_2: 8430.7715, Loss_2_test: 8499.3574\n",
+      "Epoch    19, Loss_1: 2332.4370, Loss_1_test: 2306.8374, Loss_2: 7937.1792, Loss_2_test: 8002.5386\n",
+      "Epoch    20, Loss_1: 2063.3108, Loss_1_test: 2039.8699, Loss_2: 7460.7153, Loss_2_test: 7522.9370\n"
+     ]
+    }
+   ],
    "source": [
     "# Instantiate the model, define custom loss function, and optimizer\n",
     "model1 = RNNModel()\n",
@@ -141,47 +153,33 @@
     "    # save models\n",
     "    if loss_1_test < min_loss_1_test:\n",
     "        min_loss_1_test = loss_1_test\n",
-    "        torch.save(model1.state_dict(), 'saved_models/model1_rnn_best.pth')\n",
+    "        torch.save(model1.state_dict(), 'saved_models/model1_rnn_tanh_best.pth')\n",
     "    \n",
     "    if loss_2_test < min_loss_2_test:\n",
     "        min_loss_2_test = loss_2_test\n",
-    "        torch.save(model2.state_dict(), 'saved_models/model2_rnn_best.pth')"
+    "        torch.save(model2.state_dict(), 'saved_models/model2_rnn_tanh_best.pth')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RNNModel(\n",
-       "  (rnn): RNN(1, 8)\n",
-       "  (fc1): Linear(in_features=8, out_features=1, bias=True)\n",
-       ")"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load model1\n",
     "model1 = RNNModel()\n",
-    "model1.load_state_dict(torch.load('saved_models/model1_rnn_best.pth'))\n",
+    "model1.load_state_dict(torch.load('saved_models/model1_rnn_tanh_best.pth'))\n",
     "model1.eval()  # Set the model to evaluation mode\n",
     "\n",
     "# Load model2\n",
     "model2 = RNNModel()\n",
-    "model2.load_state_dict(torch.load('saved_models/model2_rnn_best.pth'))\n",
+    "model2.load_state_dict(torch.load('saved_models/model2_rnn_tanh_best.pth'))\n",
     "model2.eval()  # Set the model to evaluation mode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +227,7 @@
     "    row.append(sum(err_1))\n",
     "    row.append(sum(err_2))\n",
     "\n",
-    "    write_to_csv('learning_output/rnn.csv', header, row)"
+    "    write_to_csv('learning_output/rnn_tanh.csv', header, row)"
    ]
   }
  ],
