--- a/lambda_learning_linear_GD.ipynb
+++ b/lambda_learning_linear_GD.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x2576a0afcd0>"
+       "<torch._C.Generator at 0x1f07eeb3c10>"
       ]
      },
      "execution_count": 1,
@@ -36,7 +36,7 @@
    "source": [
     "# data\n",
     "data = pd.read_csv('learning_data/seq_features.csv')['count'].to_numpy()\n",
-    "data = np.log10(np.log10(data)).reshape(-1,1)\n",
+    "data = np.log(np.log(data)).reshape(-1,1)\n",
     "data = torch.FloatTensor(data)\n",
     "\n",
     "target_df_1 = pd.read_csv('learning_data/target_lambda_fold1.csv')\n",
@@ -60,9 +60,9 @@
    "outputs": [],
    "source": [
     "# Define the linear model\n",
-    "class MyModel(nn.Module):\n",
+    "class LinearModel(nn.Module):\n",
     "    def __init__(self, input_size):\n",
-    "        super(MyModel, self).__init__()\n",
+    "        super(LinearModel, self).__init__()\n",
     "        self.fc1 = nn.Linear(input_size, 1)\n",
     "\n",
     "    def forward(self, x):\n",
@@ -78,30 +78,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [    0/5000], Loss_1:   1.5074, Loss_1_test:   1.6002, Loss_2:   1.5755, Loss_2_test:   1.2990\n",
-      "Epoch [  500/5000], Loss_1:   1.1202, Loss_1_test:   1.5196, Loss_2:   1.3383, Loss_2_test:   1.1373\n",
-      "Epoch [ 1000/5000], Loss_1:   1.0727, Loss_1_test:   1.4801, Loss_2:   1.3318, Loss_2_test:   1.1579\n",
-      "Epoch [ 1500/5000], Loss_1:   1.0659, Loss_1_test:   1.4829, Loss_2:   1.3318, Loss_2_test:   1.1618\n",
-      "Epoch [ 2000/5000], Loss_1:   1.0653, Loss_1_test:   1.4819, Loss_2:   1.3318, Loss_2_test:   1.1588\n",
-      "Epoch [ 2500/5000], Loss_1:   1.0653, Loss_1_test:   1.4820, Loss_2:   1.3317, Loss_2_test:   1.1602\n",
-      "Epoch [ 3000/5000], Loss_1:   1.0653, Loss_1_test:   1.4820, Loss_2:   1.3317, Loss_2_test:   1.1603\n",
-      "Epoch [ 3500/5000], Loss_1:   1.0653, Loss_1_test:   1.4820, Loss_2:   1.3318, Loss_2_test:   1.1614\n",
-      "Epoch [ 4000/5000], Loss_1:   1.0653, Loss_1_test:   1.4820, Loss_2:   1.3317, Loss_2_test:   1.1599\n",
-      "Epoch [ 4500/5000], Loss_1:   1.0653, Loss_1_test:   1.4820, Loss_2:   1.3317, Loss_2_test:   1.1608\n",
-      "Epoch [ 5000/5000], Loss_1:   1.0653, Loss_1_test:   1.4820, Loss_2:   1.3318, Loss_2_test:   1.1590\n"
+      "Epoch [    0/5000], Loss_1:   2.4550, Loss_1_test:   2.2277, Loss_2:   1.9890, Loss_2_test:   2.1132\n",
+      "Epoch [  500/5000], Loss_1:   1.1537, Loss_1_test:   1.5936, Loss_2:   1.4097, Loss_2_test:   1.1994\n",
+      "Epoch [ 1000/5000], Loss_1:   1.1146, Loss_1_test:   1.5216, Loss_2:   1.3405, Loss_2_test:   1.1347\n",
+      "Epoch [ 1500/5000], Loss_1:   1.0817, Loss_1_test:   1.4872, Loss_2:   1.3321, Loss_2_test:   1.1509\n",
+      "Epoch [ 2000/5000], Loss_1:   1.0690, Loss_1_test:   1.4842, Loss_2:   1.3317, Loss_2_test:   1.1593\n",
+      "Epoch [ 2500/5000], Loss_1:   1.0659, Loss_1_test:   1.4835, Loss_2:   1.3318, Loss_2_test:   1.1595\n",
+      "Epoch [ 3000/5000], Loss_1:   1.0653, Loss_1_test:   1.4809, Loss_2:   1.3318, Loss_2_test:   1.1587\n",
+      "Epoch [ 3500/5000], Loss_1:   1.0653, Loss_1_test:   1.4820, Loss_2:   1.3318, Loss_2_test:   1.1619\n",
+      "Epoch [ 4000/5000], Loss_1:   1.0653, Loss_1_test:   1.4820, Loss_2:   1.3318, Loss_2_test:   1.1578\n",
+      "Epoch [ 4500/5000], Loss_1:   1.0653, Loss_1_test:   1.4820, Loss_2:   1.3318, Loss_2_test:   1.1625\n",
+      "Epoch [ 5000/5000], Loss_1:   1.0653, Loss_1_test:   1.4820, Loss_2:   1.3318, Loss_2_test:   1.1580\n"
      ]
     }
    ],
    "source": [
     "# Instantiate the model, define custom loss function, and optimizer\n",
-    "model1 = MyModel(input_size = 1)\n",
-    "model2 = MyModel(input_size = 1)\n",
+    "model1 = LinearModel(input_size = 1)\n",
+    "model2 = LinearModel(input_size = 1)\n",
     "\n",
     "squared_hinge_loss = SquaredHingeLoss()\n",
     "optimizer1 = optim.Adam(model1.parameters(), lr=0.01)\n",
     "optimizer2 = optim.Adam(model2.parameters(), lr=0.01)\n",
     "\n",
     "# Training loop\n",
+    "record_loss1_test = []\n",
+    "record_loss2_test = []\n",
+    "min_loss_1_test = float('inf')\n",
+    "min_loss_2_test = float('inf')\n",
+    "\n",
     "epochs = 5000\n",
     "for epoch in range(epochs+1):\n",
     "    # Forward pass\n",
@@ -122,6 +127,19 @@
     "    optimizer2.zero_grad()\n",
     "    loss_2.backward()\n",
     "    optimizer2.step()\n",
+    "\n",
+    "    # record\n",
+    "    record_loss1_test.append(loss_1_test.item())\n",
+    "    record_loss2_test.append(loss_2_test.item())\n",
+    "\n",
+    "    # save models\n",
+    "    if loss_1_test < min_loss_1_test:\n",
+    "        min_loss_1_test = loss_1_test\n",
+    "        torch.save(model1.state_dict(), 'saved_models/model1_linear_best.pth')\n",
+    "    \n",
+    "    if loss_2_test < min_loss_2_test:\n",
+    "        min_loss_2_test = loss_2_test\n",
+    "        torch.save(model2.state_dict(), 'saved_models/model2_linear_best.pth')\n",
     "    \n",
     "    # Print the loss every 100 epochs\n",
     "    if (epoch) % 500 == 0:\n",
@@ -132,6 +150,36 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearModel(\n",
+       "  (fc1): Linear(in_features=1, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load model1\n",
+    "model1 = LinearModel(input_size=1)\n",
+    "model1.load_state_dict(torch.load('saved_models/model1_linear_best.pth'))\n",
+    "model1.eval()  # Set the model to evaluation mode\n",
+    "\n",
+    "# Load model2\n",
+    "model2 = LinearModel(input_size=1)\n",
+    "model2.load_state_dict(torch.load('saved_models/model2_linear_best.pth'))\n",
+    "model2.eval()  # Set the model to evaluation mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "with torch.no_grad():\n",
@@ -141,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +222,7 @@
     "    row.append(sum(err_1))\n",
     "    row.append(sum(err_2))\n",
     "\n",
-    "    write_to_csv('learning_output/linear_GD.csv', header, row)"
+    "    write_to_csv('learning_output/linear.csv', header, row)"
    ]
   }
  ],
