--- a/test_everything.ipynb
+++ b/test_everything.ipynb
@@ -4,10 +4,23 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch._C.Generator at 0x208ffcabd10>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import torch\n",
-    "import torch.nn as nn"
+    "import torch.nn as nn\n",
+    "\n",
+    "torch.manual_seed(4)"
    ]
   },
   {
@@ -19,57 +32,79 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.2826, -0.3373,  0.2062],\n",
-      "        [-0.3126, -0.6534, -0.6177]])\n",
-      "tensor([[-0.1035, -0.0665],\n",
-      "        [-0.6990,  0.0839]])\n",
-      "tensor([[ 0.3240,  0.0997],\n",
-      "        [-0.1140, -0.3130]])\n",
-      "tensor([[-0.1855, -0.1067],\n",
-      "        [ 0.5084, -0.3747]])\n"
+      "- Number of parameters in the RNN: 6\n",
+      "\n",
+      "- state weight:\n",
+      " [[Parameter containing:\n",
+      "tensor([[1.],\n",
+      "        [2.]], requires_grad=True), Parameter containing:\n",
+      "tensor([[1., 0.],\n",
+      "        [2., 0.]], requires_grad=True)]]\n",
+      "\n",
+      "- output:\n",
+      " tensor([[1., 2.],\n",
+      "        [3., 6.]], grad_fn=<SqueezeBackward1>)\n",
+      "\n",
+      "- last hidden:\n",
+      " tensor([[3., 6.]], grad_fn=<SqueezeBackward1>)\n"
      ]
     }
    ],
    "source": [
-    "rnn = nn.RNN(input_size=3, hidden_size=2, num_layers=2, nonlinearity='relu', bias=False, batch_first=False)\n",
-    "print(rnn.weight_ih_l0.data)\n",
-    "print(rnn.weight_ih_l1.data)\n",
-    "print(rnn.weight_hh_l0.data)\n",
-    "print(rnn.weight_hh_l1.data)"
+    "# Define your RNN\n",
+    "rnn = nn.RNN(input_size=1, hidden_size=2, num_layers=1, nonlinearity='relu', bias=False, batch_first=False)\n",
+    "total_params = sum(p.numel() for p in rnn.parameters())\n",
+    "print(f\"- Number of parameters in the RNN: {total_params}\\n\")\n",
+    "\n",
+    "# Set the weights for the first layer\n",
+    "rnn.weight_ih_l0.data = torch.tensor([[1.0],[2.0]])\n",
+    "rnn.weight_hh_l0.data = torch.tensor([[1.0, 0.0], [2.0, 0.0]])\n",
+    "\n",
+    "input = torch.arange(1, 3).view(2, 1).float()\n",
+    "\n",
+    "h0 = torch.tensor([[0.0, 0.0]])\n",
+    "output, hn = rnn(input, h0)\n",
+    "\n",
+    "# print\n",
+    "print(\"- state weight:\\n\", rnn.all_weights)\n",
+    "print()\n",
+    "print(\"- output:\\n\", output)\n",
+    "print()\n",
+    "print(\"- last hidden:\\n\", hn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of parameters in the RNN: 14\n",
+      "- Number of parameters in the RNN: 14\n",
       "\n",
       "- state weight:\n",
       " [Parameter containing:\n",
       "tensor([[1.],\n",
       "        [2.]], requires_grad=True), Parameter containing:\n",
-      "tensor([[0., 0.],\n",
-      "        [0., 0.]], requires_grad=True)]\n",
+      "tensor([[1., 0.],\n",
+      "        [2., 0.]], requires_grad=True)]\n",
       "\n",
       "- hidden features weight:\n",
       " [Parameter containing:\n",
       "tensor([[1., 0.],\n",
       "        [2., 1.]], requires_grad=True), Parameter containing:\n",
       "tensor([[0., 0.],\n",
-      "        [0., 0.]], requires_grad=True)]\n",
+      "        [0., 1.]], requires_grad=True)]\n",
       "\n",
       "- output:\n",
-      " tensor([[1., 4.],\n",
-      "        [2., 8.]], grad_fn=<SqueezeBackward1>)\n",
+      " tensor([[ 1.,  4.],\n",
+      "        [ 3., 16.]], grad_fn=<SqueezeBackward1>)\n",
       "\n",
       "- last hidden:\n",
-      " tensor([[2., 4.],\n",
-      "        [2., 8.]], grad_fn=<SqueezeBackward1>)\n"
+      " tensor([[ 3.,  6.],\n",
+      "        [ 3., 16.]], grad_fn=<SqueezeBackward1>)\n"
      ]
     }
    ],
@@ -77,14 +112,14 @@
     "# Define your RNN\n",
     "rnn = nn.RNN(input_size=1, hidden_size=2, num_layers=2, nonlinearity='relu', bias=False, batch_first=False)\n",
     "total_params = sum(p.numel() for p in rnn.parameters())\n",
-    "print(f\"Number of parameters in the RNN: {total_params}\\n\")\n",
+    "print(f\"- Number of parameters in the RNN: {total_params}\\n\")\n",
     "\n",
     "# Set the weights for the first layer\n",
     "rnn.weight_ih_l0.data = torch.tensor([[1.0],[2.0]])\n",
     "rnn.weight_ih_l1.data = torch.tensor([[1.0, 0.0], [2.0, 1.0]])\n",
     "\n",
-    "rnn.weight_hh_l0.data = torch.tensor([[0.0, 0.0], [0.0, 0.0]])\n",
-    "rnn.weight_hh_l1.data = torch.tensor([[0.0, 0.0], [0.0, 0.0]])\n",
+    "rnn.weight_hh_l0.data = torch.tensor([[1.0, 0.0], [2.0, 0.0]])\n",
+    "rnn.weight_hh_l1.data = torch.tensor([[0.0, 0.0], [0.0, 1.0]])\n",
     "\n",
     "input = torch.arange(1, 3).view(2, 1).float()\n",
     "\n",
@@ -95,6 +130,64 @@
     "print(\"- state weight:\\n\", rnn.all_weights[0])\n",
     "print()\n",
     "print(\"- hidden features weight:\\n\", rnn.all_weights[1])\n",
+    "print()\n",
+    "print(\"- output:\\n\", output)\n",
+    "print()\n",
+    "print(\"- last hidden:\\n\", hn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Number of parameters in the RNN: 4\n",
+      "\n",
+      "- state weight:\n",
+      " [[Parameter containing:\n",
+      "tensor([[0.]], requires_grad=True), Parameter containing:\n",
+      "tensor([[1.]], requires_grad=True), Parameter containing:\n",
+      "tensor([0.], requires_grad=True), Parameter containing:\n",
+      "tensor([1.], requires_grad=True)]]\n",
+      "\n",
+      "- output:\n",
+      " tensor([[ 1.],\n",
+      "        [ 2.],\n",
+      "        [ 3.],\n",
+      "        [ 4.],\n",
+      "        [ 5.],\n",
+      "        [ 6.],\n",
+      "        [ 7.],\n",
+      "        [ 8.],\n",
+      "        [ 9.],\n",
+      "        [10.]], grad_fn=<SqueezeBackward1>)\n",
+      "\n",
+      "- last hidden:\n",
+      " tensor([[10.]], grad_fn=<SqueezeBackward1>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "rnn = nn.RNN(input_size=1, hidden_size=1, num_layers=1, nonlinearity='relu', bias=True, batch_first=False)\n",
+    "total_params = sum(p.numel() for p in rnn.parameters())\n",
+    "print(f\"- Number of parameters in the RNN: {total_params}\\n\")\n",
+    "\n",
+    "rnn.weight_ih_l0.data = torch.tensor([[0.0]])\n",
+    "rnn.weight_hh_l0.data = torch.tensor([[1.0]])\n",
+    "rnn.bias_ih_l0.data   = torch.tensor([0.0])\n",
+    "rnn.bias_hh_l0.data   = torch.tensor([1.0])\n",
+    "\n",
+    "input = torch.randn(10, 1)\n",
+    "\n",
+    "h0 = torch.tensor([[0.0]])\n",
+    "output, hn = rnn(input, h0)\n",
+    "\n",
+    "# print\n",
+    "print(\"- state weight:\\n\", rnn.all_weights)\n",
     "print()\n",
     "print(\"- output:\\n\", output)\n",
     "print()\n",
