--- a/error_rate.ipynb
+++ b/error_rate.ipynb
@@ -15,11 +15,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BIC_df        = pd.read_csv('learning_output/BIC.csv')\n",
-    "linear_svm_df = pd.read_csv('learning_output/linear_SVM.csv')\n",
-    "linear_gd_df  = pd.read_csv('learning_output/linear_GD.csv')\n",
-    "deep_df       = pd.read_csv('learning_output/deep.csv')\n",
-    "rnn_df        = pd.read_csv('learning_output/rnn.csv')"
+    "BIC_df    = pd.read_csv('learning_output/BIC.csv')\n",
+    "linear_df = pd.read_csv('learning_output/linear.csv')\n",
+    "deep_df   = pd.read_csv('learning_output/deep.csv')\n",
+    "rnn_df    = pd.read_csv('learning_output/rnn.csv')"
    ]
   },
   {
@@ -31,22 +30,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "method:        BIC \t fold1.test: 72.74 \t fold2.test: 60.58\n",
-      "method: linear-svm \t fold1.test: 76.46 \t fold2.test: 65.96\n",
-      "method:  linear-gd \t fold1.test: 76.60 \t fold2.test: 66.15\n",
-      "method:       deep \t fold1.test: 81.91 \t fold2.test: 73.85\n",
-      "method:        rnn \t fold1.test: 82.31 \t fold2.test: 74.42\n"
+      "method:     BIC \t fold1.test: 65.43 \t fold2.test: 50.00\n",
+      "method:  linear \t fold1.test: 76.06 \t fold2.test: 65.38\n",
+      "method:    deep \t fold1.test: 81.91 \t fold2.test: 73.85\n",
+      "method:     rnn \t fold1.test: 82.31 \t fold2.test: 74.42\n"
      ]
     }
    ],
    "source": [
-    "for df in [BIC_df, linear_svm_df, linear_gd_df, deep_df, rnn_df]:\n",
+    "for df in [BIC_df, linear_df, deep_df, rnn_df]:\n",
     "    if(df is BIC_df):\n",
     "        method = \"BIC\"\n",
-    "    elif(df is linear_svm_df):\n",
-    "        method = \"linear-svm\"\n",
-    "    elif(df is linear_gd_df):\n",
-    "        method = \"linear-gd\"\n",
+    "    elif(df is linear_df):\n",
+    "        method = \"linear\"\n",
     "    elif(df is deep_df):\n",
     "        method = \"deep\"\n",
     "    elif(df is rnn_df):\n",
@@ -61,7 +57,7 @@
     "    rate1 = (fold1_total_labels - fold1_total_errs)/fold1_total_labels\n",
     "    rate2 = (fold2_total_labels - fold2_total_errs)/fold2_total_labels\n",
     "\n",
-    "    print(\"method: %10s \\t fold1.test: %5.2f \\t fold2.test: %5.2f\" % (method, 100*rate1, 100*rate2))"
+    "    print(\"method: %7s \\t fold1.test: %5.2f \\t fold2.test: %5.2f\" % (method, 100*rate1, 100*rate2))"
    ]
   }
  ],
